@@ -1,5 +1,6 @@
-2020-09-07 Janf Kotanski <jan.kotanski@desy.de>
+2020-09-08 Jan Kotanski <jan.kotanski@desy.de>
 	* add a buffer for diffractograms
+	* rename polarscale to toolscale
 	* tagged as 2.46.0
 
 2020-09-03 Janf Kotanski <jan.kotanski@desy.de>
